--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,6 +4,7 @@
     background-color: $color-grey-0;
     padding: 1.2rem 4.8rem;
     border-bottom: 1px solid $color-grey-100;
+    font-size: 62.5%;
   
     display: flex;
     gap: 2.4rem;
