--- a/src/layout/applayout.scss
+++ b/src/layout/applayout.scss
@@ -10,13 +10,15 @@
     background-color: $color-grey-50;
     padding: 4rem 4.8rem 6.4rem;
     overflow: auto;
+    font-size: 100%;
 
     .Container {
-      max-width: 120rem;
+      max-width: 100%;
       margin: 0 auto;
       display: flex;
       flex-direction: column;
       gap: 3.2rem;
+      color:white;
     }
   }
 }
